Reporte estado aplicaiconn